--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -24,20 +24,20 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+/* body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-}
+} */
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
 
-button {
+app-button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -48,11 +48,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+app-button:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
+app-button:focus,
+app-button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
@@ -64,7 +64,7 @@ button:focus-visible {
   a:hover {
     color: #747bff;
   }
-  button {
+  app-button {
     background-color: #f9f9f9;
   }
 }
