--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,5 +1,13 @@
 @import "tailwindcss";
 
+html, body{
+    margin: 0;
+    padding: 0;
+   width: 100%;
+height: 100%;
+    overflow: hidden;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
